--- a/ShowTracker/WatchedShowApiService/WatchedShowApiService.csproj
+++ b/ShowTracker/WatchedShowApiService/WatchedShowApiService.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
       <PrivateAssets>all</PrivateAssets>
@@ -22,7 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AuthData\AuthData.csproj" />
     <ProjectReference Include="..\WatchedShowData\WatchedShowData.csproj" />
+    <ProjectReference Include="..\WatchedShowService\WatchedShowService.csproj" />
   </ItemGroup>
 
 </Project>
