--- a/ShowTracker/showdatatracker/package.json
+++ b/ShowTracker/showdatatracker/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "reactjs-popup": "^2.0.6",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
